pkg/kgateway/agentgatewaysyncer/testdata/inputs/trafficpolicy/rbac/mcp-rbac.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: agentgateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
    - name: example-gateway
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: mcp-backend
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
  labels:
    app: mcp-app
spec:
  selector:
    test: test
  ports:
    - protocol: TCP
      appProtocol: kgateway.dev/mcp
      port: 80
      targetPort: test
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: mcp-backend
spec:
  mcp:
    targets:
    - name: mcp-app
      selector:
        services:
          matchLabels:
            app: mcp-app
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: cel-rbac-policy
spec:
  targetRefs:
    - name: mcp-backend
      kind: AgentgatewayBackend
      group: agentgateway.dev
  backend:
    mcp:
      authorization:
        policy:
          matchExpressions:
          - 'mcp.tool.name == "echo"'
          - 'jwt.sub == "test-user" && mcp.tool.name == "add"'
          - 'mcp.tool.name == "printEnv" && jwt.nested.key == "value"'
